Added decompilation